<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>uap</artifactId>
	<description>uap</description>
	<name>uap</name>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<targetMapperPackage>com.dili.uap.dao</targetMapperPackage>
		<targetModelPackage>com.dili.uap.domain</targetModelPackage>
		<targetServicePackage>com.dili.uap.service</targetServicePackage>
		<targetControllerPackage>com.dili.uap.controller</targetControllerPackage>
		<drools.version>7.28.0.Final</drools.version>
		<java.version>13</java.version>
	</properties>

	<!-- 父工程定义 -->
	<parent>
		<artifactId>dili-uap</artifactId>
		<groupId>com.dili</groupId>
		<version>2.6.1-SNAPSHOT</version>
	</parent>

	<build>
		<finalName>uap</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.2.2.RELEASE</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<!-- 编译JDK版本 -->
				<configuration>
					<source>13</source>
					<target>13</target>
					<encoding>UTF-8</encoding>
					<parameters>true</parameters>
					<compilerArgs>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- 在运行时为项目临时迁移属性, 迁移完成之后，请确保从项目的依赖关系中移除该模块 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-properties-migrator</artifactId>
		</dependency>
	
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>

		<!-- 利刃框架引入 -->
<!--		<dependency>-->
<!--			<groupId>com.dili</groupId>-->
<!--			<artifactId>ss-scheduler</artifactId>-->
<!--			<version>${sharp-sword.version}</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-uid</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>

		<dependency>
			<groupId>com.belerweb</groupId>
			<artifactId>pinyin4j</artifactId>
			<version>2.5.1</version>
		</dependency>

		<!--swagger -->
<!--		<dependency>-->
<!--			<groupId>io.springfox</groupId>-->
<!--			<artifactId>springfox-swagger-ui</artifactId>-->
<!--			<version>2.9.2</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>io.swagger</groupId>-->
<!--			<artifactId>swagger-annotations</artifactId>-->
<!--			<version>1.5.22</version>-->
<!--		</dependency>-->


		<!-- if you enable json support in spring mvc. -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>


		<!-- =============== spring boot starters =============== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<!--<version>${boot.version}</version> -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>

		<!-- actuator -->
		<!--<dependency>-->
		<!--<groupId>org.springframework.boot</groupId>-->
		<!--<artifactId>spring-boot-starter-actuator</artifactId>-->
		<!--</dependency>-->
		<!-- admin server依赖 st -->
		<!--<dependency>-->
			<!--<groupId>de.codecentric</groupId>-->
			<!--<artifactId>spring-boot-admin-starter-client</artifactId>-->
			<!--<version>2.0.1</version>-->
		<!--</dependency>-->
		<!--<dependency>-->
			<!--<groupId>org.jolokia</groupId>-->
			<!--<artifactId>jolokia-core</artifactId>-->
			<!--&lt;!&ndash;<version>1.5.0</version>&ndash;&gt;-->
		<!--</dependency>-->

		<!--<dependency>-->
			<!--<groupId>org.springframework.boot</groupId>-->
			<!--<artifactId>spring-boot-starter-actuator</artifactId>-->
		<!--</dependency>-->
		<!-- admin server依赖 end -->
		<!-- 解决Beetl模板热更新 -->
		<!--<dependency>-->
			<!--<groupId>org.springframework.boot</groupId>-->
			<!--<artifactId>spring-boot-devtools</artifactId>-->
			<!--<optional>true</optional> &lt;!&ndash;optional=true表示不传递依赖&ndash;&gt;-->
		<!--</dependency>-->

		<!-- 内部包 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>uap-sdk</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-processor</artifactId>
			<version>${sharp-sword.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun</groupId>
					<artifactId>tools</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- 公共信息 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons</artifactId>
			<version>1.1.0-SNAPSHOT</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jeasy/easy-rules-core -->
<!--		<dependency>-->
<!--			<groupId>org.jeasy</groupId>-->
<!--			<artifactId>easy-rules-core</artifactId>-->
<!--			<version>3.3.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.jeasy</groupId>-->
<!--			<artifactId>easy-rules-support</artifactId>-->
<!--			<version>3.3.0</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.jeasy</groupId>-->
<!--			<artifactId>easy-rules-mvel</artifactId>-->
<!--			<version>3.3.0</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.kie</groupId>-->
<!--			<artifactId>kie-spring</artifactId>-->
<!--			<version>${drools.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.drools</groupId>-->
<!--			<artifactId>drools-compiler</artifactId>-->
<!--			<version>${drools.version}</version>-->
<!--		</dependency>-->
	</dependencies>


</project>